--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "util.inherits with compatibility",
   "main": "index.js",
   "scripts": {
-    "test": "node --harmony ./node_modules/.bin/ava --verbose --timeout=10s"
+    "test": "ava --verbose --timeout=10s"
   },
   "files": [
     "index.js"
@@ -29,25 +29,11 @@
     "url": "https://github.com/kaelzhang/node-util-inherits/issues"
   },
   "ava": {
-    "require": "babel-register",
-    "babel": {
-      "babelrc": true
-    },
     "files": [
       "test.js"
     ]
   },
   "devDependencies": {
-    "ava": "^0.16.0",
-    "babel-plugin-transform-async-to-generator": "^6.22.0",
-    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
-    "babel-plugin-transform-exponentiation-operator": "^6.8.0",
-    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-register": "^6.24.1"
+    "ava": "^0.17.0"
   }
 }
